libs/error-stack/tests/ui/missing_args.stderr
error: unexpected end of macro invocation
  --> tests/ui/missing_args.rs:17:5
   |
17 |     bail!()
   |     ^^^^^^^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$err:expr`
  --> src/macros.rs
   |
   |     ($err:expr $(,)?) => {{
   |      ^^^^^^^^^

error: unexpected end of macro invocation
  --> tests/ui/missing_args.rs:21:13
   |
21 |     let _ = ensure!();
   |             ^^^^^^^^^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$cond:expr`
  --> src/macros.rs
   |
   |     ($cond:expr, $err:expr $(,)?) => {{
   |      ^^^^^^^^^^

error: unexpected end of macro invocation
  --> tests/ui/missing_args.rs:27:25
   |
27 |     let _ = ensure!(true);
   |                         ^ missing tokens in macro arguments
   |
note: while trying to match `,`
  --> src/macros.rs
   |
   |     ($cond:expr, $err:expr $(,)?) => {{
   |                ^
